<resources>
    <string name="app_name">數體健</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">數體健</string>
    <string name="unit_heart_rate">BPM</string>
    <string name="unit_heart_rate_item">次/分</string>
    <string name="unit_blood_pressure">MMHG</string>
    <string name="unit_blood_oxygen">%</string>
    <string name="unit_breath_rate">次/分</string>
    <string name="unit_body_temperature">°c</string>
    <string name="unit_sleep_minute">分</string>
    <string name="unit_sleep_hour">時</string>
    <string name="unit_step">步</string>
    <string name="unit_kcal">Kcal</string>
    <string name="unit_mpod">MPOD</string>
    <string name="unit_t_score">T-score</string>
    <string name="legend_heart_rate">
        <font color="#fe6867" size="20"><b>了解心率數據分析\n</b></font>
        <font color="#000000">
            \n靜態心率:靜止狀態下每分鐘心跳次數一般為60-100次。
            \n動態心率:根據心率變化來判斷身體運動狀態。
        </font>
    </string>
    <string name="legend_blood_pressure">
        <font color="#FFA67A" size="20"><b>血壓正常值\n</b></font>
        <font color="#000000">
            \n收縮壓 \u003C 120MMHG。
            \n舒張壓 \u003C 80MMHG。
        </font>
    </string>
    <string name="legend_blood_oxygen">
        <font color="#86D238" size="20"><b>血氧飽和度說明\n</b></font>
        <font color="#000000">
            \n血氧飽和度是指血液中運載氧氣的血紅蛋白與氧氣結合的比例，通常以百分比表示，是呼吸循環的重要生理指標，健康成人的血氧飽和度在95%至100%之間。
        </font>
    </string>
    <string name="legend_sleep">
        <font color="#8359FC" size="20"><b>了解睡眠品質\n</b></font>
        <font color="#000000">
            \n睡眠品質是從手錶測得睡眠規律，時間，深度睡眠，夜裡醒來次數和清醒時間等因子後，以匹茲堡睡眠指數計算而成。
        </font>
    </string>
    <string name="step_message">
        <font color="#000000" size="18"><b>活動量\n</b></font>
        <font color="#000000" size="14">本週活動量 0 MET-min\n
            推薦一週總共活動量為 600~1000 MET-min</font>
    </string>
    <string name="legend_step">
        <font color="#38D6FD" size="20"><b>了解活動量\n</b></font>
        <font color="#000000">\n
            運動達到中等或高等強度並持續達十分鐘以上</font>
    </string>
    <string name="legend_kcal">
        <font color="#000000">
            卡路里是計算能量(也可稱為熱量)的單位。任何食物、飲品(除清水之外)都含有能量。\n
            1卡路里的定義就是將1千克的水升高溫度攝氏1度所需要的能量。
        </font>
    </string>
    <string name="legend_arm_blood_pressure">
        <font color="#000000">
            當收縮壓超過130(mmHg)或是舒張壓超過80(mmHg)任一項即達高血壓標準，左右手之三次平均血壓相差超過15(mmHg)，得到心血管疾病概率較高。\n
            \n
            PP脈壓分期\n
            30-40(mmHg)屬正常值；40-60(mmHg)屬異常前期；60(mmHg)以上過高。\n
            \n
            MAP平均脈壓分期\n
            65-110(mmHg)正常；65(mmHg)以下過低。
        </font>
    </string>
    <string name="legend_macular_pigment">
        <font color="#fe6867" size="20"><b>黃斑部色素說明\n</b></font>
        <font color="#000000">\n
            MPOD：> 0.75\n
            黃斑部色素正常，黃斑部色素層儲存的葉黃素及玉米黃素足夠，建議可低劑量補充葉黃素。\n
            \n
            MPOD：0.5 ~ 0.74\n
            黃斑部色素輕度流失，建議每日攝取葉黃素，以補充眼睛黃斑部色素層。\n
            \n
            MPOD：0.26 ~ 0.49\n
            黃斑部色素中度流失，建議每日攝取至少6mg葉黃素，以維持眼睛黃斑部色素層厚度，若有黃斑部病變家族史、抽菸，則建議設取高劑量葉黃素，預防眼部病變。\n
            \n
            MPOD：0.25以下\n
            黃斑部色素層防護性偏低，增加黃斑部病變的機率，需定期追蹤並攝取高劑量葉黃素，以維持健康的防護及預防眼睛病變。
        </font>
    </string>
    <string name="legend_bone_density">
        <font color="#fe6867" size="20"><b>骨質密度與年齡、性別皆有關聯。\n</b></font>
        <font color="#000000">\n
            T-Score：> 0\n
            骨質密度良好，多攝取鈣質，多存骨本。\n
            \n
            T-Score：0 ~ -1\n
            骨質密度正常，多攝取鈣質，可增加補充鈣片。\n
            \n
            T-Score：-1.1 ~ -2.49\n
            骨質密度流失(-1.1 ~ -1.49) 輕度缺乏、(-1.5 ~ -1.99) 中度缺乏、(-2 ~ -2.49)重度缺乏，密度品質屬缺乏中(骨本不足)，減少不良習慣，定期抽血，尿液等檢查，並攝取高鈣食物，多嘗試重力型運動，並與醫師配合(每日補充鈣片600 ~ 1,000mg)。\n
            \n
            T-Score：-2.5以下\n
            骨質脆弱，遠離不良習慣，做健康檢查，個人應注意勿跌倒及外力撞擊，以免發生骨折危險並與醫療院所密切結合(加強每日補充鈣片1,000 ~ 1,500mg)。
        </font>
    </string>
    <string name="click_measure_hr"><font color="#ffffff">點擊開始血壓校正</font></string>
    <string name="insert_data_no_auto"><font color="#ffffff">手動新增數據</font></string>
    <string name="title_sleep">總睡眠</string>
    <string name="txt_sleep">睡眠品質是從手錶測得睡眠規律，時間，深度睡眠，夜裡醒來次數和清醒時間等因子後，以匹茲堡睡眠指數計算而成</string>
    <string name="notification">ttttt</string>
    <string name="camera">照相</string>
    <string name="gallery">圖庫</string>
    <string name="cut">裁切</string>
    <string name="txt_agree">我同意以此資料註冊會員，並同意<font color="#CE0000">會員使用條款</font></string>
    <string name="circle_blood_pressure">血壓</string>
    <string name="circle_kcal">卡路里</string>
    <string name="circle_bone_density">骨質密度</string>
</resources>